--- a/20181204 for whole dataset.Rmd
+++ b/20181204 for whole dataset.Rmd
@@ -108,11 +108,11 @@ outcome_weight=ifelse(month(date)==12 & is.na(outcome_4),(31-day(data_first_trea
 
 ```{}
 
-data_first_treatment_12ow$season[month(data_first_treatment_12ow$date) %in% c(1,2,12)] <- "winter"
 data_first_treatment_12ow$season[month(data_first_treatment_12ow$date) %in% c(3:5)] <- "spring"
 data_first_treatment_12ow$season[month(data_first_treatment_12ow$date) %in% c(6:8)] <- "summer"
 data_first_treatment_12ow$season[month(data_first_treatment_12ow$date) %in% c(9:11)] <- "autumn"
-
+data_first_treatment_12ow$season[month(data_first_treatment_12ow$date) %in% c(1,2,12)] <- "winter"
+data_first_treatment_12ow$season <- factor(data_first_treatment_12ow$season, ordered = TRUE, levels = c("spring", "summer", "autumn", "winter"))
 ```
 
 ###########################
@@ -358,31 +358,38 @@ vars_confounders = c(
   "nr_medication",
   "COPD_morb",
   "migraine_morb",
-  "hartfalen_morb",
   "nr_contacts_resp",
   "osteop_morb",
   "poor_immune_response",
   "alcmisb_morb",
+  "practice_size",
+  "Depressie_morb",
+  "aangaf_morb",
+  "hartfalen_morb",
+  "flu_epi",
+  "season",
   "postalcode",
   "nr_contacts_infection",
   "nr_prescriptions_AB"
 )
 
-data_first_treatment_12ow_relevant$ID <- seq.int(nrow(data_first_treatment_12ow_relevant))
-names(data_first_treatment_12ow_relevant)
-
 data_confounders_to <- data_first_treatment_12ow_relevant[c(
   "outcome_4","AB_nose_infection","type_AB_nose", "outcome_weight", "ID", 
-  "age",
+   "age",
   "sex",
   "nr_medication",
   "COPD_morb",
   "migraine_morb",
-  "hartfalen_morb",
-  "nr_contacts_resp", 
+  "nr_contacts_resp",
   "osteop_morb",
   "poor_immune_response",
   "alcmisb_morb",
+  "practice_size",
+  "Depressie_morb",
+  "aangaf_morb",
+  "hartfalen_morb",
+  "flu_epi",
+  "season",
   "postalcode",
   "nr_contacts_infection",
   "nr_prescriptions_AB"
@@ -391,16 +398,21 @@ data_confounders_to <- data_first_treatment_12ow_relevant[c(
 
 data_confounders <- data_first_treatment_12ow_relevant[c(
   "ID",
-  "age",
+    "age",
   "sex",
   "nr_medication",
   "COPD_morb",
   "migraine_morb",
-  "hartfalen_morb",
   "nr_contacts_resp",
   "osteop_morb",
   "poor_immune_response",
   "alcmisb_morb",
+  "practice_size",
+  "Depressie_morb",
+  "aangaf_morb",
+  "hartfalen_morb",
+  "flu_epi",
+  "season",
   "postalcode",
   "nr_contacts_infection",
   "nr_prescriptions_AB"
@@ -459,14 +471,14 @@ summary(model_pooled_multi)
 ###########################
 
 
-data_confounders_mi_to$AB<-0
-data_confounders_mi_to$AB[as.numeric(data_confounders_mi_to$AB_nose_infection)==2]<-1
+data_confounders_to$AB<-0
+data_confounders_to$AB[as.numeric(data_confounders_to$AB_nose_infection)==2]<-1
 
 
 set.seed(1)
 PS_Model<-ps(
   as.formula(paste("AB ~ ",paste(vars_confounders,collapse="+"),sep="")),
-  data = data_confounders_mi_to,
+  data = data_confounders_to,
   verbose = FALSE, 
   estimand = "ATE")
 
@@ -484,12 +496,12 @@ ps.balance<-bal.table(PS_Model)
 ps.balance
 write.table(ps.balance, file="P:/NZR/NZR-001/Innovatieve Onderzoeksmethoden/2. Machine learning antibiotica bij ontstekingen/03. Dataverwerking/6. output R/20181204wqi/ps.balance_ab.csv", sep = ",")
 
-write.table(ps.balance, file="H:/qww/AMC/Utrecht/NIVEL/writing/tables/ps.balance_abmi.csv", sep = ",")
+write.table(ps.balance, file="H:/qww/AMC/Utrecht/NIVEL/writing/tables/ps.balance_abflu.csv", sep = ",")
 
-data_confounders_mi_to$w<- get.weights(PS_Model,stop.method = "es.mean" )
+data_confounders_to$w<- get.weights(PS_Model,stop.method = "es.mean" )
 
 
-design.ps <- svydesign(ids=~1, weights = ~ w*outcome_weight, data = data_confounders_mi_to)
+design.ps <- svydesign(ids=~1, weights = ~ w*outcome_weight, data = data_confounders_to)
 
 
 ## survey
@@ -579,11 +591,11 @@ cbind( exp(coef(multi_type)), exp(summary(multi_type)$coefficients[,1] - 1.96*su
 ###########################ctor
 # %% running of multinomial propensity scores
 ###########################
-```{r}
+
 
 MNPS_cto_type <- mnps(
   as.formula(paste("type_AB_nose ~ ",paste(vars_confounders,collapse="+"),sep="")),
-  data = data_confounders_mi_to,
+  data = data_confounders_to,
   estimand = "ATE",
   verbose = FALSE,
   stop.method = c("es.mean", "ks.mean"),
@@ -598,6 +610,7 @@ mnp.balance<-bal.table(MNPS_cto_type)
 mnp.balance
 write.table(mnp.balance, file="P:/NZR/NZR-001/Innovatieve Onderzoeksmethoden/2. Machine learning antibiotica bij ontstekingen/03. Dataverwerking/6. output R/20181204wqi/mnp.balance_type.csv", sep = ",")
 
+write.table(mnp.balance, file="H:/qww/AMC/Utrecht/NIVEL/writing/tables/mnps.balance_typeflu.csv", sep = ",")
 
 plot(MNPS_cto_type, plots = 1) 
 plot(MNPS_cto_type, plots = 2, subset = "es.mean")
@@ -608,9 +621,9 @@ plot(MNPS_cto_type, plots = 3)
 plot(MNPS_cto_type, plots = 4) 
 plot(MNPS_cto_type, plots = 5) 
 
-data_confounders_mi_to$w <- get.weights(MNPS_cto_type, stop.method = "es.mean")
+data_confounders_to$wt <- get.weights(MNPS_cto_type, stop.method = "es.mean")
 
-design.mnps <- svydesign(ids=~1, weights=~w*outcome_weight, data=data_confounders_mi_to) 
+design.mnps <- svydesign(ids=~1, weights=~wt*outcome_weight, data=data_confounders_to) 
 ## survey
 # model1
 glm_type <- svyglm(outcome_4 ~ type_AB_nose, design = design.mnps,family=quasibinomial)
@@ -635,7 +648,6 @@ summary(glm_type_confounder)
 
 cbind( exp(coef(glm_type_confounder)), exp(summary(glm_type_confounder)$coefficients[,1] - 1.96*summary(glm_type_confounder)$coefficients[,2]), exp(summary(glm_type_confounder)$coefficients[,1] + 1.96*summary(glm_type_confounder)$coefficients[,2]) )
 
-```
 
 ###########################
 # ITE
